testing the code

--- a/index.html
+++ b/index.html
@@ -17,131 +17,107 @@
 </head>
 
 <body>
+    <div class="container-fluid" id="control-panel">
+            <span class="btn btn-info fa fa-square" id="drawing-rectangle">Drawing Rectangle</span>
+            <span class="btn btn-info fa fa-paint-brush" id="drawing-line">Drawing Line</span>
+            <span class="btn btn-info fa fa-paint-brush" id="drawing-straightLine">Drawing Straight Line</span>
+            <span class="btn btn-info fa fa-paint-brush" id="drawing-ellipse">Drawing Ellipse</span>
+            <span class="btn btn-info fa fa-paint-brush" id="drawing-polygon">Drawing Polygon</span>
+            <span class="btn btn-info fa fa-paint-brush" id="previous">Previous</span>
+            <span class="btn btn-info fa fa-paint-brush" id="next">Next</span>
+            <span class="btn btn-info fa fa-paint-brush" id="selectors">Select</span>
+            <span class="btn btn-info fa fa-paint-brush" id="clear-all">Clear</span>
+            <span class="btn btn-info fa fa-paint-brush" id="eraser">Eraser</span>
+            <span class="btn btn-info fa fa-paint-brush" id="linepattern-brush">Line Pattern Brush</span>
+            <span class="btn btn-info fa fa-paint-brush" id="lineshadow-brush">Line Shadow Brush</span>
+    </div>
     <div id="canvas-container">
-        <canvas id="canvas-real" class="canvas" width='900px' height='500px'></canvas>
-        <canvas id="canvas-draft" class="canvas" width='900px' height='500px'></canvas>
+        <canvas id="canvas-real" class="canvas" width='100px' height='100px'></canvas>
+        <canvas id="canvas-draft" class="canvas" width='100px' height='100px'></canvas>
     </div>
 
-    <div class="slidecontainer">
-        <input type="range" min="1" max="50" value="5" class="slider" id="pixel">
-        <p>Pixel:
-            <span id="displayVal1"></span>
-        </p>
 
-        <input type="range" min="1" max="50" value="5" class="slider" id="blur">
-        <p>Blur:
-            <span id="displayVal2"></span>
-        </p>
-    </div>
+    
 
-    <<div class="buttons" >
-        <span class="btn btn-info fa fa-square" id="drawing-rectangle">Drawing Rectangle</span>
-        <span class="btn btn-info fa fa-paint-brush" id="drawing-line">Drawing Line</span>
-        <span class="btn btn-info fa fa-paint-brush" id="drawing-straightLine">Drawing Straight Line</span>
-        <span class="btn btn-info fa fa-paint-brush" id="drawing-ellipse">Drawing Ellipse</span>
-        <span class="btn btn-info fa fa-paint-brush" id="drawing-polygon">Drawing Polygon</span>
-        <span class="btn btn-info fa fa-paint-brush" id="previous">Previous</span>
-        <span class="btn btn-info fa fa-paint-brush" id="next">Next</span>
-        <span class="btn btn-info fa fa-paint-brush" id="selectors">Select</span>
-        <span class="btn btn-info fa fa-paint-brush" id="clear-all">Clear</span>
-        <span class="btn btn-info fa fa-paint-brush" id="eraser">Eraser</span>
-        <span class="btn btn-info fa fa-paint-brush" id="linepattern-brush">Line Pattern Brush</span>
-        <span class="btn btn-info fa fa-paint-brush" id="lineshadow-brush">Line Shadow Brush</span>
-        <button id="background-fill" type="button" class="btn btn-primary">Fill Canvas</button>
-        <button id="openFile" type="button" class="btn btn-primary">Upload</button>
-        <input id="file" type="file" accept=".png, .jpg, jpeg"/>
-        <span class="btn btn-info fa fa-paint-brush" id="openFile">Upload</span>
-        <input id="file" type="file" accept=".jpg, .jpeg, .png">
+        <script type='text/javascript' src="canvas-common.js"></script>
+        <script type='text/javascript' src="drawing-line.js"></script>
+        <script type='text/javascript' src="drawing-rectangle.js"></script>
+        <script type='text/javascript' src="drawing-straightLine.js"></script>
+        <script type='text/javascript' src="drawing-ellipse.js"></script>
+        <script type='text/javascript' src="drawing-polygon.js"></script>
+        <script type='text/javascript' src="snapshot.js"></script>
+        <script type='text/javascript' src="eraser.js"></script>
+        <script type='text/javascript' src="color-picker.js"></script>
+        <script type='text/javascript' src="fontsizeGet.js"></script>
+        <script type='text/javascript' src="selectors.js"></script>
+        <script type='text/javascript' src="background-fill.js"></script>
+        <script type='text/javascript' src="upload-download.js"></script>
+        <script type='text/javascript' src="main.js"></script>
 
-        <a class="btn btn-info" href ="#" id="downLoad" download="image.jpeg">Download</a>
-    </div>
-
-    <label for="color-input" id="color-label" style="background-color: red"></label>
-    <input type="checkbox" id="color-input"></input>
-
-    <div id="color-picker">
-        <canvas id="color-block" height="150" width="150"></canvas>
-        <canvas id="color-strip" height="150" width="30"></canvas>
-    </div>
-
-    <script type='text/javascript' src="canvas-common.js"></script>
-    <script type='text/javascript' src="drawing-line.js"></script>
-    <script type='text/javascript' src="drawing-rectangle.js"></script>
-    <script type='text/javascript' src="drawing-straightLine.js"></script>
-    <script type='text/javascript' src="drawing-ellipse.js"></script>
-    <script type='text/javascript' src="drawing-polygon.js"></script>
-    <script type='text/javascript' src="snapshot.js"></script>
-    <script type='text/javascript' src="eraser.js"></script>
-    <script type='text/javascript' src="color-picker.js"></script>
-    <script type='text/javascript' src="fontsizeGet.js"></script>
-    <script type='text/javascript' src="selectors.js"></script>
-    <script type='text/javascript' src="background-fill.js"></script>
-    <script type='text/javascript' src="upload-download.js"></script>
-
-    <script type='text/javascript'>
-        // default to be rectangle feature
-        currentFunction = new DrawingLine(contextReal, contextDraft);
-
-        $('#drawing-rectangle').click(() => {
-            currentFunction = new DrawingRectangle(contextReal, contextDraft);
-        });
-        $('#drawing-line').click(() => {
+        <script type='text/javascript'>
+            // default to be rectangle feature
             currentFunction = new DrawingLine(contextReal, contextDraft);
-        });
-        $('#drawing-straightLine').click(() => {
-            currentFunction = new DrawingStraightLine(contextReal, contextDraft);
-        });
-        $('#drawing-ellipse').click(() => {
-            currentFunction = new DrawingEllipse(contextReal, contextDraft);
-        });
-        $('#drawing-polygon').click(() => {
-            currentFunction = new DrawingPolygon(contextReal, contextDraft);
-        });
-        $('#eraser').click(() => {
-            currentFunction = new Eraser(contextReal, contextDraft);
-        });
-        $('#selectors').click(() => {
-            currentFunction = new Selectors(contextReal, contextDraft);
-        });
-        $('#background-fill').click(() => {
-            currentFunction = new backgroundFill(contextReal, contextDraft);
-        });
-        $('#openFile').click(() => {
-            currentFunction = new triggerClick();
-        });
-        $('#linepattern-brush').click(() => {
-            currentFunction = new LinePatternBrush(contextReal);
-            $('#pixel').prop('min','10');
-            $('#displayVal1').html($('#pixel').val());
-        });
-        $('#lineshadow-brush').click(() => {
-            currentFunction = new LineShadowBrush(contextReal, contextDraft);
-        });
 
-        $('#downLoad').on('click', () => {
-            document.getElementById("downLoad").download = "image.jpeg";
-            document.getElementById("downLoad").href = document.getElementById("canvas-real").toDataURL("image/jpeg");
-        });
+            $('#drawing-rectangle').click(() => {
+                currentFunction = new DrawingRectangle(contextReal, contextDraft);
+            });
+            $('#drawing-line').click(() => {
+                currentFunction = new DrawingLine(contextReal, contextDraft);
+            });
+            $('#drawing-straightLine').click(() => {
+                currentFunction = new DrawingStraightLine(contextReal, contextDraft);
+            });
+            $('#drawing-ellipse').click(() => {
+                currentFunction = new DrawingEllipse(contextReal, contextDraft);
+            });
+            $('#drawing-polygon').click(() => {
+                currentFunction = new DrawingPolygon(contextReal, contextDraft);
+            });
+            $('#eraser').click(() => {
+                currentFunction = new Eraser(contextReal, contextDraft);
+            });
+            $('#selectors').click(() => {
+                currentFunction = new Selectors(contextReal, contextDraft);
+            });
+            $('#background-fill').click(() => {
+                currentFunction = new backgroundFill(contextReal, contextDraft);
+            });
+            $('#openFile').click(() => {
+                currentFunction = new triggerClick();
+            });
+            $('#linepattern-brush').click(() => {
+                currentFunction = new LinePatternBrush(contextReal);
+                $('#pixel').prop('min', '10');
+                $('#displayVal1').html($('#pixel').val());
+            });
+            $('#lineshadow-brush').click(() => {
+                currentFunction = new LineShadowBrush(contextReal, contextDraft);
+            });
 
-        // Control the snapshot
-        $('#previous').click(() => {
-            Previous();
-        });
-        $('#next').click(() => {
-            Next();
-        });
+            $('#downLoad').on('click', () => {
+                document.getElementById("downLoad").download = "image.jpeg";
+                document.getElementById("downLoad").href = document.getElementById("canvas-real").toDataURL("image/jpeg");
+            });
 
-        // clear all
-        $('#clear-all').click(() => {
-          contextReal.clearRect(0, 0, canvasReal.width, canvasReal.height);
-          contextDraft.clearRect(0, 0, canvasDraft.width, canvasDraft.height);
-          currentFunction.reset();
-          snapshot[0] = contextReal.getImageData(0,0, canvasReal.width, canvasReal.height);
-          index = 0;
-          snapshot.length = 1;
-        });
+            // Control the snapshot
+            $('#previous').click(() => {
+                Previous();
+            });
+            $('#next').click(() => {
+                Next();
+            });
 
-    </script>
+            // clear all
+            $('#clear-all').click(() => {
+                contextReal.clearRect(0, 0, canvasReal.width, canvasReal.height);
+                contextDraft.clearRect(0, 0, canvasDraft.width, canvasDraft.height);
+                currentFunction.reset();
+                snapshot[0] = contextReal.getImageData(0, 0, canvasReal.width, canvasReal.height);
+                index = 0;
+                snapshot.length = 1;
+            });
+
+        </script>
 
 </body>
 
