--- a/index.html
+++ b/index.html
@@ -3,13 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy"
+    crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+    crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4"
+    crossorigin="anonymous"></script>
   <script src="https://hammerjs.github.io/dist/hammer.js"></script>
-
+  <script src="main.js"></script>
   <link href="main.css" rel="stylesheet" type='text/css'>
 </head>
 
@@ -17,31 +22,59 @@
 
   <div id="control-panel">
     <div class="icon">
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-pencil fa-2x" id="drawing-line"></i></a>
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-pencil-square fa-2x" id="linepattern-brush"></i></a>
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-pencil-square-o fa-2x" id="lineshadow-brush"></i></a>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-pencil fa-2x" id="drawing-line"></i>
+      </a>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-pencil-square fa-2x" id="linepattern-brush"></i>
+      </a>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-pencil-square-o fa-2x" id="lineshadow-brush"></i>
+      </a>
 
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-minus fa-2x" id="drawing-straightLine"></i></a>
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-eraser fa-2x" id="eraser"></i></a>
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-arrows fa-2x" id="selectors"></i></a>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-minus fa-2x" id="drawing-straightLine"></i>
+      </a>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-eraser fa-2x" id="eraser"></i>
+      </a>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-arrows fa-2x" id="selectors"></i>
+      </a>
 
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-object-ungroup fa-2x" id="drawing-rectangle"></i></a>
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-bookmark-o fa-2x" id="drawing-polygon"></i></a>
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-circle-thin fa-2x" id="drawing-ellipse"></i></a>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-object-ungroup fa-2x" id="drawing-rectangle"></i>
+      </a>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-bookmark-o fa-2x" id="drawing-polygon"></i>
+      </a>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-circle-thin fa-2x" id="drawing-ellipse"></i>
+      </a>
 
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-arrow-left fa-2x" id="previous"></i></a>
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-trash-o fa-2x" id="clear-all"></i></a>
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-arrow-right fa-2x" id="next"></i></a>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-arrow-left fa-2x" id="previous"></i>
+      </a>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-trash-o fa-2x" id="clear-all"></i>
+      </a>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-arrow-right fa-2x" id="next"></i>
+      </a>
 
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-bitbucket fa-2x" id="background-fill"></i></a>
-      <a href="#" class="btn btn-sq-xs " id="downLoad" download="image.jpeg"><i class="fa fa-download fa-2x" ></i></a>
-      <a href="#" class="btn btn-sq-xs "><i class="fa fa-picture-o fa-2x" id="openFile"></i></a>
-      <input id="file" type="file" accept=".jpg, .jpeg, .png"/>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-bitbucket fa-2x" id="background-fill"></i>
+      </a>
+      <a href="#" class="btn btn-sq-xs " id="downLoad" download="image.jpeg">
+        <i class="fa fa-download fa-2x"></i>
+      </a>
+      <a href="#" class="btn btn-sq-xs ">
+        <i class="fa fa-picture-o fa-2x" id="openFile"></i>
+      </a>
+      <input id="file" type="file" accept=".jpg, .jpeg, .png" />
     </div>
 
     <div class="slidecontainer">
-
-
       <input type="range" min="1" max="50" value="5" class="slider" id="pixel">
       <p>Pixel:
         <span id="displayVal1"></span>
@@ -61,19 +94,17 @@
       <canvas id="color-block" height="150" width="120"></canvas>
       <canvas id="color-strip" height="150" width="20"></canvas>
     </div>
+  </div> <!-- End of control panel -->
 
-    <!--      <input id="file" type="file" accept=".jpg, .jpeg, .png"/> --->
+
+  <div id="canvas-container">
+    <canvas id="canvas-real" class="canvas" width='900px' height='500px'></canvas>
+    <canvas id="canvas-draft" class="canvas" width='900px' height='500px'></canvas>
   </div>
-
-
-  <canvas id="canvas-real" class="canvas" width='900px' height='500px'></canvas>
-  <canvas id="canvas-draft" class="canvas" width='900px' height='500px'></canvas>
-
 
 
   <script type='text/javascript' src="canvas-common.js"></script>
   <script type='text/javascript' src="drawing-line.js"></script>
-
   <script type='text/javascript' src="drawing-rectangle.js"></script>
   <script type='text/javascript' src="drawing-straightLine.js"></script>
   <script type='text/javascript' src="drawing-ellipse.js"></script>
