modified the drawing shape code

--- a/index.html
+++ b/index.html
@@ -26,38 +26,38 @@
   <div id="control-panel">
     <div class="box1">
       <div class="icon">
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-pencil fa-2x" id="drawing-line"></i>
+        <a href="#" class="btn btn-sq-xs" id="drawing-line"">
+          <i class="fa fa-pencil fa-2x"></i>
         </a>
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-pencil-square fa-2x" id="linepattern-brush"></i>
+        <a href="#" class="btn btn-sq-xs" id="linepattern-brush">
+          <i class="fa fa-pencil-square fa-2x"></i>
         </a>
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-pencil-square-o fa-2x" id="lineshadow-brush"></i>
-        </a>
-
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-minus fa-2x" id="drawing-straightLine"></i>
-        </a>
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-eraser fa-2x" id="eraser"></i>
-        </a>
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-arrows fa-2x" id="selectors"></i>
+        <a href="#" class="btn btn-sq-xs" id="lineshadow-brush">
+          <i class="fa fa-pencil-square-o fa-2x"></i>
         </a>
 
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-object-ungroup fa-2x" id="drawing-rectangle"></i>
+        <a href="#" class="btn btn-sq-xs" id="drawing-straightLine">
+          <i class="fa fa-minus fa-2x"></i>
         </a>
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-bookmark-o fa-2x" id="drawing-polygon"></i>
+        <a href="#" class="btn btn-sq-xs" id="eraser">
+          <i class="fa fa-eraser fa-2x"></i>
         </a>
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-circle-thin fa-2x" id="drawing-ellipse"></i>
+        <a href="#" class="btn btn-sq-xs" id="selectors">
+          <i class="fa fa-arrows fa-2x"></i>
         </a>
 
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-arrow-left fa-2x" id="previous"></i>
+        <a href="#" class="btn btn-sq-xs" id="drawing-rectangle">
+          <i class="fa fa-object-ungroup fa-2x" ></i>
+        </a>
+        <a href="#" class="btn btn-sq-xs" id="drawing-polygon">
+          <i class="fa fa-bookmark-o fa-2x" ></i>
+        </a>
+        <a href="#" class="btn btn-sq-xs" id="drawing-ellipse">
+          <i class="fa fa-circle-thin fa-2x" ></i>
+        </a>
+
+        <a href="#" class="btn btn-sq-xs" id="previous">
+          <i class="fa fa-arrow-left fa-2x"></i>
         </a>
         <a href="#" class="btn btn-sq-xs ">
           <i class="fa fa-trash-o fa-2x" id="clear-all"></i>
