--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div id="control-panel">
     <div class="box1">
       <div class="icon">
-        <a href="#" class="btn btn-sq-xs" id="drawing-line"">
+        <a href="#" class="btn btn-sq-xs" id="drawing-line">
           <i class="fa fa-pencil fa-2x"></i>
         </a>
         <a href="#" class="btn btn-sq-xs" id="linepattern-brush">
