--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div id="control-panel">
     <div class="box1">
       <div class="icon">
-        <a href="#" class="btn btn-sq-xs" id="drawing-line"">
+        <a href="#" class="btn btn-sq-xs" id="drawing-line">
           <i class="fa fa-pencil fa-2x"></i>
         </a>
         <a href="#" class="btn btn-sq-xs" id="linepattern-brush">
@@ -59,21 +59,21 @@
         <a href="#" class="btn btn-sq-xs" id="previous">
           <i class="fa fa-arrow-left fa-2x"></i>
         </a>
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-trash-o fa-2x" id="clear-all"></i>
+        <a href="#" class="btn btn-sq-xs" id="clear-all">
+          <i class="fa fa-trash-o fa-2x"></i>
         </a>
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-arrow-right fa-2x" id="next"></i>
+        <a href="#" class="btn btn-sq-xs" id="next">
+          <i class="fa fa-arrow-right fa-2x"></i>
         </a>
 
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-bitbucket fa-2x" id="background-fill"></i>
+        <a href="#" class="btn btn-sq-xs " id="background-fill">
+          <i class="fa fa-bitbucket fa-2x" ></i>
         </a>
         <a href="#" class="btn btn-sq-xs " id="downLoad" download="image.jpeg">
           <i class="fa fa-download fa-2x"></i>
         </a>
-        <a href="#" class="btn btn-sq-xs ">
-          <i class="fa fa-picture-o fa-2x" id="openFile"></i>
+        <a href="#" class="btn btn-sq-xs" id="openFile">
+          <i class="fa fa-picture-o fa-2x" ></i>
         </a>
         <input id="file" type="file" accept=".jpg, .jpeg, .png" />
       </div>
@@ -119,10 +119,6 @@
   <script type='text/javascript' src="selectors.js"></script>
   <script type='text/javascript' src="upload-download.js"></script>
 
-
-
-
-
   <script type='text/javascript'>
     let backgroundColortest
     // default to be rectangle feature
@@ -149,11 +145,8 @@
       currentFunction = new Selectors(contextReal, contextDraft);
     });
     $('#background-fill').click(() => {
-      //$('#canvas-real').css('backgroundColor', rgbaColor);
       contextReal.fillStyle = rgbaColor;
       contextReal.fillRect(0,0,canvasReal.width,canvasReal.height);
-      backgroundColortest = rgbaColor;
-//      currentFunction = new backgroundFill(contextReal, contextDraft);
     });
     $('#openFile').click(() => {
       new triggerClick();
